# orchestrator

./: .env.example  .flake8  .gitignore  Android-Setup.md  Dockerfile  OPERATIONS.md  PROJECT_SUMMARY.md  README.md  SECURITY_INCIDENT.md  SETUP.md  STATUS.md  build.gradle.kts  docker-compose.browser-session.yml  docker-compose.windows.yml  migrate_instance_tracking.py  migrate_resume_fields.py  requirements.txt  settings.gradle.kts  start.ps1  start.sh  start_all.sh  wsl-start.sh
.notes/: DEBUG_HISTORY.md
app/: __init__.py.bak  auth.py  build.gradle.kts  celery_app.py  config.py  database.py  db_migrations.py  dependencies.py  main.py  models.py  (+4 more)
scripts/evals/fixtures/checkpoint_resume_mid_task/: README.md  pyproject.toml  validate_seed.py
scripts/evals/fixtures/checkpoint_resume_mid_task/docs/: step-one.txt
scripts/evals/fixtures/checkpoint_resume_mid_task/src/resume_task/: __init__.py  workflow.py
scripts/evals/fixtures/checkpoint_resume_mid_task/tests/: test_workflow.py
scripts/evals/fixtures/debug_import_error_repair/: README.md  pyproject.toml  validate_seed.py
scripts/evals/fixtures/debug_import_error_repair/src/import_repair/: __init__.py  formatter.py
scripts/evals/fixtures/debug_import_error_repair/tests/: test_formatter.py
scripts/evals/fixtures/medium_cli_multi_file_feature/: README.md  pyproject.toml  validate_seed.py
scripts/evals/fixtures/medium_cli_multi_file_feature/src/medium_cli/: __init__.py  cli.py  formatting.py  store.py
scripts/evals/fixtures/medium_cli_multi_file_feature/tests/: test_cli.py  test_store.py  test_summary.py
(+1115 files in other folders)
