[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-resume-fixture"
version = "0.1.0"
description = "Seed fixture for orchestrator checkpoint_resume_mid_task evaluation"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
